fix button width text jumping on toggle

--- a/pages/trips/trips.module.scss
+++ b/pages/trips/trips.module.scss
@@ -73,7 +73,7 @@
     }
 
     &--button {
-      min-width: 230px
+      min-width: 250px
     }
   }
   
